Fixed the bug where the menu is not fully visible when fullscreen

--- a/src/index.scss
+++ b/src/index.scss
@@ -468,6 +468,7 @@ nav.nav {
     width: 100vw;
     height: 100vh;
     background: white;
+    box-sizing: border-box;
   }
 
   &.dark {
